Modified all forms Modified all forms to disallow autocomplete

--- a/psc/templates/psc/dco_checklist_form.html
+++ b/psc/templates/psc/dco_checklist_form.html
@@ -56,7 +56,7 @@
 														<p>{{ form.C.help_text }}</p>
 												</div>
 												<div class='third'>
-														<input name='{{ form.C.name }}' type='text' class='text numeric' maxlength='3' value="{{ form.initial.C|default:"" }}">
+														<input name='{{ form.C.name }}' type='text' autocomplete='off' class='text numeric' maxlength='3' value="{{ form.initial.C|default:"" }}">
 												</div>
 										</div>
 										<div class='parent'>
@@ -112,7 +112,7 @@
 														<p>{{ form.G.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.G.name }}' type='text' class='text numeric' value="{{ form.initial.G|default:"" }}"></div>
+														<div class='options'><input name='{{ form.G.name }}' type='text' autocomplete='off' class='text numeric' value="{{ form.initial.G|default:"" }}"></div>
 												</div>
 										</div>
 										<div class='parent'>
@@ -136,7 +136,7 @@
 														<p>{{ form.J.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.J.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.J|default:"" }}"></div>
+														<div class='options'><input name='{{ form.J.name }}' type='text' autocomplete='off' maxlength="4" class='text numeric' value="{{ form.initial.J|default:"" }}"></div>
 												</div>
 										</div>
 										<div class='parent'>
@@ -147,7 +147,7 @@
 														<p>{{ form.K.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.K.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.K|default:"" }}"></div>
+														<div class='options'><input name='{{ form.K.name }}' type='text' autocomplete='off' maxlength="4" class='text numeric' value="{{ form.initial.K|default:"" }}"></div>
 												</div>
 										</div>
 										<div class='parent'>
@@ -229,7 +229,7 @@
 														<p>{{ form.S.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.S.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.S|default:"" }}"></div>
+														<div class='options'><input name='{{ form.S.name }}' type='text' autocomplete='off' maxlength="4" class='text numeric' value="{{ form.initial.S|default:"" }}"></div>
 												</div>
 										</div>
 										<div class='parent'>
@@ -240,7 +240,7 @@
 														<p>{{ form.T.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.T.name }}' type='text' maxlength="4" class='text numeric' value="{{ form.initial.T|default:"" }}"></div>
+														<div class='options'><input name='{{ form.T.name }}' type='text' autocomplete='off' maxlength="4" class='text numeric' value="{{ form.initial.T|default:"" }}"></div>
 												</div>
 										</div>
 										<div class='parent'>
@@ -251,7 +251,7 @@
 														<p>{{ form.U.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.U.name }}' type='text' class='text numeric' value="{{ form.initial.U|default:"" }}"></div>
+														<div class='options'><input name='{{ form.U.name }}' type='text' autocomplete='off' class='text numeric' value="{{ form.initial.U|default:"" }}"></div>
 												</div>
 										</div>
 								</div>
@@ -268,7 +268,7 @@
 														<p>{{ form.V.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.V.name }}' type='text' class='text numeric' value="{{ form.initial.V|default:"" }}"></div>
+														<div class='options'><input name='{{ form.V.name }}' type='text' autocomplete='off' class='text numeric' value="{{ form.initial.V|default:"" }}"></div>
 												</div>
 										</div>
 										<div class="parent">
@@ -279,7 +279,7 @@
 														<p>{{ form.W.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.W.name }}' type='text' class='text numeric' value="{{ form.initial.W|default:"" }}"></div>
+														<div class='options'><input name='{{ form.W.name }}' type='text' autocomplete='off' class='text numeric' value="{{ form.initial.W|default:"" }}"></div>
 												</div>
 										</div>
 										<div class="parent">
@@ -290,7 +290,7 @@
 														<p>{{ form.X.help_text }}</p>
 												</div>
 												<div class='third'>
-														<div class='options'><input name='{{ form.X.name }}' type='text' class='text numeric' value="{{ form.initial.X|default:"" }}"></div>
+														<div class='options'><input name='{{ form.X.name }}' type='text' autocomplete='off' class='text numeric' value="{{ form.initial.X|default:"" }}"></div>
 												</div>
 										</div>
 										<div class='parent'>
