--- a/psc/templates/psc/dco_incident_update_form.html
+++ b/psc/templates/psc/dco_incident_update_form.html
@@ -157,7 +157,7 @@
                         </div>
                         <div class='third'>
                             <div class='options'>
-                                <input name='{{ form.comment.name }}' type='text' class='text comment' value='{{ form.initial.comment }}'>
+                                <input name='{{ form.comment.name }}' type='text' autocomplete='off' class='text comment' value='{{ form.initial.comment }}'>
                             </div>
                         </div>
                     </div>
