--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -66,7 +66,7 @@
                             <p>{{ form.C.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <input name='{{ form.C.name }}' type='text' class='text numeric' maxlength='3' value="{{ form.initial.C|default:"" }}">
+                            <input name='{{ form.C.name }}' type='text' autocomplete='off' class='text numeric' maxlength='3' value="{{ form.initial.C|default:"" }}">
                         </div>
                     </div>
                     <div class='parent'>
@@ -113,7 +113,7 @@
                             <p>{{ form.F.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <input type='text' name='{{ form.F.name }}' class='text numeric' maxlength='3' value='{{ form.initial.F|default:"" }}'>
+                            <input type='text' autocomplete='off' name='{{ form.F.name }}' class='text numeric' maxlength='3' value='{{ form.initial.F|default:"" }}'>
                         </div>
                     </div>
                     <div class='parent last'>
@@ -353,7 +353,7 @@
                             <p>{{ form.Y.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <p><input name='{{ form.Y.name }}' type='text' class='text numeric' maxlength='4' value='{{ form.initial.Y|default:"" }}'></p>
+                            <p><input name='{{ form.Y.name }}' type='text' autocomplete='off' class='text numeric' maxlength='4' value='{{ form.initial.Y|default:"" }}'></p>
                         </div>
                     </div>
                     <div class='parent'>
@@ -364,7 +364,7 @@
                             <p>{{ form.Z.help_text }}</p>
                         </div>
                         <div class='third'>
-                            <p><input name='{{ form.Z.name }}' type='text' class='text numeric' maxlength='4' value='{{ form.initial.Z|default:"" }}'></p>
+                            <p><input name='{{ form.Z.name }}' type='text' autocomplete='off' class='text numeric' maxlength='4' value='{{ form.initial.Z|default:"" }}'></p>
                         </div>
                     </div>
                     <div class='parent'>
