fixed a bug preventing the display of '0' answers

--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -77,7 +77,7 @@
 					{% endif %}
                     </td>
                     <td class="checklist">
-					{% if cl.A and cl.B and cl.C and cl.G %}
+					{% if cl.A and cl.B and cl.C != None and cl.F != None and cl.G %}
 						{% if cl.D1 or cl.D2 or cl.D3 or cl.D4 %}
 							{% if cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 %}
                         <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
@@ -96,7 +96,7 @@
 					{% endif %}
                     </td>
                     <td class="checklist">
-					{% if cl.H and cl.J and cl.K and cl.M and cl.N and cl.P and cl.Q and cl.R and cl.S and cl.T and cl.U and cl.V and cl.W and cl.X and cl.Y and cl.Z and cl.AA %}
+					{% if cl.H and cl.J and cl.K and cl.M and cl.N and cl.P and cl.Q and cl.R and cl.S and cl.T and cl.U and cl.V and cl.W and cl.X and cl.Y != None and cl.Z != None and cl.AA != None %}
                         <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
 					{% else %}
 					{% if cl.H or cl.J or cl.K or cl.M or cl.N or cl.P or cl.Q or cl.R or cl.S or cl.T or cl.U or cl.V or cl.W or cl.X or cl.Y or cl.Z or cl.AA %}
