--- a/psc/templates/psc/msg_log.html
+++ b/psc/templates/psc/msg_log.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="grid_16">
     <div class="box">
-        <h2>Message Log</h2>
+        <h2>Message Log <span class="flag"><button onclick="location.href='{% url psc.views.export "messagelog" %}'">Export</button></span></h2>
         <div class="block">
 			{{ messages_list.as_html }}
         </div>
