--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -19,7 +19,9 @@
 {% block content %}
 <div class="grid_16">
     <div class="box">
-        <h2>Display, Claims &amp; Objections Checklists</h2>
+        <h2>Display, Claims &amp; Objections Checklists <span class="flag">
+            <button onclick="location.href='{% url psc.views.dco_checklist_list %}'">Refresh</button>
+        </span></h2>
         <div class="block">
             <div id="filter">
                 <form action="" method="get" id="filter_form" accept-charset="utf-8">
