--- a/psc/templates/psc/dco_incident_list.html
+++ b/psc/templates/psc/dco_incident_list.html
@@ -20,7 +20,11 @@
 {% block content %}
 <div class="grid_16">
     <div class="box">
-        <h2>Display, Claims and Objections Critical Incidents</h2>
+        <h2>Display, Claims and Objections Critical Incidents
+        <span class="flag">
+            <button onclick="location.href='{% url psc.views.dco_incident_list %}'">Refresh</button>
+        </span>
+        </h2>
         <div class="block">
             <div id="filter">
                 <form action="" method="get" id="filter_form" accept-charset="utf-8">
