--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="grid_16">
         <div class="box">
-            <h2>Dashboard</h2>
+            <h2>Dashboard <span class="flag"><button onclick="location.href='{% url psc.views.home %}'">Refresh</button></span></h2>
             <div class="box dashboard">
                 <!--<div class="controls">
                
