fixed issue with displaying statuses for special cases

--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -80,22 +80,32 @@
 					{% endif %}
                     </td>
                     <td class="checklist">
-					{% if cl.A and cl.B and cl.C != None and cl.F != None and cl.G %}
+					{% if cl.A != 4 and cl.B and cl.C != None and cl.F != None and cl.G %}
 						{% if cl.D1 or cl.D2 or cl.D3 or cl.D4 %}
 							{% if cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 %}
                         <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
-							{% else %}
-                        <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 							{% endif %}
-						{% else %}
-                        <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 						{% endif %}
 					{% else %}
-					{% if cl.A or cl.B or cl.C or cl.D1 or cl.D2 or cl.D3 or cl.D4 or cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 or cl.F or cl.G %}
-                        <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
-					{% else %}
+						{% if cl.A = None and cl.B = 0 and cl.C = None and cl.F = None and cl.G = 0 %}
+							{% if cl.D1 = None and cl.D2 = None and cl.D3 = None and cl.D4 = None %}
+								{% if cl.E1 = None and cl.E2 = None and cl.E3 = None and cl.E4 = None and cl.E5 = None %}
                         <img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
-					{% endif %}
+								{% endif %}
+							{% endif %}
+						{% else %}
+							{% if cl.A != 4 or cl.B or cl.C or cl.D1 or cl.D2 or cl.D3 or cl.D4 or cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 or cl.F or cl.G %}
+													<img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
+							{% else %}
+								{% if cl.A = 4 %}
+									{% if cl.H or cl.J or cl.K or cl.M or cl.N or cl.P or cl.Q or cl.R or cl.S or cl.T or cl.U or cl.V or cl.W or cl.X or cl.Y or cl.Z or cl.AA %}
+													<img src="/assets/img/exclamation-red.png" width="16" height="16" alt="none" />
+									{% else %}
+													<img src="/assets/img/information.png" width="16" height="16" alt="none" />
+									{% endif %}
+								{% endif %}
+							{% endif %}
+						{% endif %}
 					{% endif %}
                     </td>
                     <td class="checklist">
