--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -86,7 +86,7 @@ h2 span.flag {
 	color:#fff;
 	background:#87CEEB;
 	margin: -10px -10px 0 -10px;
-	padding:6px 12px;
+	padding:6px 12px 3px;
 }
 
 .box h2 span.indicator {
@@ -427,7 +427,7 @@ form .grandparent .parent .second p {
 
 form .grandparent .parent .third {
     margin-top: -30px;
-    margin-left: 100px;
+    margin-left: 80px;
     width: 100%;
     padding: 1%;
     float: left;
