--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -22,7 +22,7 @@
     <div class="box">
         <h2>Voter Registration Incidents<span class="flag">
                 <button onclick="location.href='{% url psc.views.vr_incident_list %}'">Refresh</button>
-                <button onclick="location.href='{% url psc.views.export "vri" %}'">Export</button>
+                {% if perms.psc.can_analyse %}<button onclick="location.href='{% url psc.views.export "vri" %}'">Export</button>{% endif %}
         </span></h2>
         <div class="block">
             <div id="filter">
