--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -27,15 +27,27 @@
                                 <h2 class="dashboard-header"><a href="#">VR Checklists </a></h2>
                                  <div class="dash-row">
                                      <div class="dash-column first">Missing 1st SMS</div>
-                                     <div class="dash-column second"><span>{{ missing_first_sms }}</span></div>
+                                     <div class="dash-column second">
+                                         <span class="missing">{{ missing_first_sms }}</span>
+                                         <span class="incomplete">{{ missing_first_sms }}</span>
+                                         <span class="complete">{{ missing_first_sms }}</span>
+                                     </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">Missing 2nd SMS</div>
-                                     <div class="dash-column second"><span>{{ missing_second_sms }}</span></div>
+                                     <div class="dash-column second">
+                                         <span class="missing">{{ missing_second_sms }}</span>
+                                         <span class="incomplete">{{ missing_second_sms }}</span>
+                                         <span class="complete">{{ missing_second_sms }}</span>
+                                     </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">Missing 3rd SMS</div>
-                                     <div class="dash-column second"><span>{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span></div>
+                                     <div class="dash-column second">
+                                         <span class="missing">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
+                                         <span class="incomplete">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
+                                         <span class="complete">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
+                                     </div>
                                 </div>
                                 <div class="dash-row last">
                                      <div class="dash-text"> <a href="{% url psc.views.vr_checklist_list %}">(View All)</a></div>
