removed missing from sms set#

--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -26,7 +26,7 @@
                             <div class="box compartment">
                                 <h2 class="dashboard-header"><a href="#">VR Checklists </a></h2>
                                  <div class="dash-row">
-                                     <div class="dash-column first">Missing 1st SMS</div>
+                                     <div class="dash-column first">1st SMS</div>
                                      <div class="dash-column second">
                                          <span class="missing">{{ missing_first_sms }}</span>
                                          <span class="incomplete">{{ missing_first_sms }}</span>
@@ -34,7 +34,7 @@
                                      </div>
                                 </div>
                                  <div class="dash-row">
-                                     <div class="dash-column first">Missing 2nd SMS</div>
+                                     <div class="dash-column first">2nd SMS</div>
                                      <div class="dash-column second">
                                          <span class="missing">{{ missing_second_sms }}</span>
                                          <span class="incomplete">{{ missing_second_sms }}</span>
@@ -42,7 +42,7 @@
                                      </div>
                                 </div>
                                  <div class="dash-row">
-                                     <div class="dash-column first">Missing 3rd SMS</div>
+                                     <div class="dash-column first">3rd SMS</div>
                                      <div class="dash-column second">
                                          <span class="missing">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
                                          <span class="incomplete">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
