--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -4,7 +4,7 @@
         <div class="box">
             <h2>Dashboard <span class="flag"><button onclick="location.href='{% url psc.views.home %}'">Refresh</button></span></h2>
             <div class="box dashboard">
-                <!--<div class="controls">
+                <div class="controls">
                
                 <form method="get">
                      Filter by Zone
@@ -19,7 +19,7 @@
                 </select>
                 <input name="Go" value="GO" type="submit" style="height: 38px; font-size: 25px">
                 </form>
-                </div>-->
+                </div>
                 <table width="100%" class="dashboard">
                     <tr>
                         <td width="50%">
@@ -28,25 +28,28 @@
                                  <div class="dash-row">
                                      <div class="dash-column first">1st SMS</div>
                                      <div class="dash-column second">
-                                         <span class="missing">{{ missing_first_sms }}</span>
-                                         <span class="incomplete">{{ missing_first_sms }}</span>
+                                         <span class="missing">{{ missing_first_sms }}</span>                                         
                                          <span class="complete">{{ missing_first_sms }}</span>
+                                         <span class="spacer">&nbsp;&nbsp;</span>
                                      </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">2nd SMS</div>
                                      <div class="dash-column second">
                                          <span class="missing">{{ missing_second_sms }}</span>
+                                         <span class="unverified">{{ missing_second_sms }}</span>
                                          <span class="incomplete">{{ missing_second_sms }}</span>
+                                         <span class="not_open">{{ missing_second_sms }}</span>
                                          <span class="complete">{{ missing_second_sms }}</span>
+                                         <span class="blank">{{ missing_second_sms }}</span>
                                      </div>
                                 </div>
                                  <div class="dash-row">
                                      <div class="dash-column first">3rd SMS</div>
                                      <div class="dash-column second">
                                          <span class="missing">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
-                                         <span class="incomplete">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
                                          <span class="complete">{% if missing_third_sms < 0 %}0{% else %}{{ missing_third_sms }}{% endif %}</span>
+                                         <span class="spacer">&nbsp;&nbsp;</span>
                                      </div>
                                 </div>
                                 <div class="dash-row last">
